        (S, P, O) with nulls as wildcards
      o added BulkUpdateHandler.remove(S,P,O) removing triples matching
        (S, P, O), Node.ANY as wildcard
      o BulkUpdateHandler generates events for these
      
      o ModelFactory has gained createUnion(Model, Model) which creates a
        dynamic union of the two argument models.

  GraphMem, SmallGraphMem
      o GraphMem has had the redundant Set(Triple) excised, and changes made
        to NodeToTriplesMap to push the triple-matching inwards and simplify
        GraphMem's find code. It will use a little less memory and should be
        a tad faster.
      o a new memory-based Graph, SmallGraphMem, has been introduced. This
        *only* holds a Set(Triple); no indexing is done. Hence it is
        unsuitable for graphs with more than "a few" statements, unless
        memory footprint is (much) more important than search speed. It
        is primarily an extreme to compare other Graphs against.

  Graph Query handling
      o Query now rewrites (some) RDQL pattern matches which are equivalent
        to startsWith, endsWith, or contains to use new Expression nodes
        with labels J_startsWith, J_endsWith, J_contains, to allow back
        ends to optimise those.

  RDQL
      o Added langeq operator
      o Remove ResultBinding.getValue() (which was an internal use
        operation) as part of move to more directly using the graph level
        queryhandling.

  Event handling
      o added new graph.GraphEvents as holder of event constants with one
        such, .removeAll, issued by BulkUpdateHandler for removeAll(), and
        a static method for creating removed-by-pattern triple values.
      o the standard Jena readers generate startRead and finishRead events
      o all the Graph events now come with their source Graph attached as an
        argument to the event method.

  Reasoners
      o Fixed ommission in handling of someValuesFrom applied to an rdfs:Datatype.