@@ -1,0 +1,73 @@
+/*
+      (c) Copyright 2004, Hewlett-Packard Development Company, LP, all rights reserved.
+      [See end of file]
+      $Id: GraphExtract.java,v 1.1 2004-08-07 12:31:52 chris-dollin Exp $
+*/
+
+package com.hp.hpl.jena.graph;
+
+import java.util.Iterator;
+
+import com.hp.hpl.jena.mem.GraphMem;
+
+/**
+     GraphExtract offers a very simple recursive extraction of a subgraph with a
+     specified root in some supergraph. The recursion is terminated by triples
+     that satisfy some supplied boundary condition.
+     
+ 	@author hedgehog
+*/
+public class GraphExtract
+    {
+    protected final TripleBoundary b;
+    
+    public GraphExtract( TripleBoundary b )
+        { this.b = b; }
+    
+    public Graph extract( Node node, Graph graph )
+        { return extractInto( new GraphMem(), node, graph ); }
+    
+    public Graph extractInto( Graph toUpdate, Node root, Graph extractFrom )
+        {
+        Iterator it = extractFrom.find( root, Node.ANY, Node.ANY );
+        while (it.hasNext())
+            {
+            Triple t = (Triple) it.next();
+            Node subRoot = t.getObject();
+            toUpdate.add( t );
+            if (toUpdate.contains( subRoot, Node.ANY, Node.ANY ) == false && b.stopAt( t ) == false)
+                extractInto( toUpdate, subRoot, extractFrom );
+            }
+        return toUpdate;
+        }
+    }
+
+/*
+    (c) Copyright 2004, Hewlett-Packard Development Company, LP
+    All rights reserved.
+    
+    Redistribution and use in source and binary forms, with or without
+    modification, are permitted provided that the following conditions
+    are met:
+    
+    1. Redistributions of source code must retain the above copyright
+       notice, this list of conditions and the following disclaimer.
+    
+    2. Redistributions in binary form must reproduce the above copyright
+       notice, this list of conditions and the following disclaimer in the
+       documentation and/or other materials provided with the distribution.
+    
+    3. The name of the author may not be used to endorse or promote products
+       derived from this software without specific prior written permission.
+    
+    THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+    IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+    OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
+    IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
+    INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
+    NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+    DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+    THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+    (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+    THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+*/
